# hs-module-13

./: .gitignore  customer_responses.md  design_document.md
docs/: README.md  connectivity.md  registration.md
final/: .env.example  Dockerfile  README.md  docker-compose.yaml  fly-deploy.sh  fly.toml  start.sh  supervisord.conf
final/classifier/: Dockerfile  main.py
final/llm/: Dockerfile  entrypoint.sh
final/orchestrator/: main.py
final/ui/: Dockerfile  app.py
hw_10/: pyproject.toml  server.py
hw_11/: README.md  hw11_lora_mlflow.ipynb  mlflow.db  pyproject.toml  run_experiments.sh  train_lora.py
hw_11/mlruns/: mlflow.db
hw_11/mlruns/mlruns/1/3fae029c80e846748d398fea437b5b34/artifacts/lora_adapter/: adapter_config.json
hw_11/mlruns/mlruns/1/691d6711ad0149b7b3608c61eff4119f/artifacts/lora_adapter/: adapter_config.json
hw_11/mlruns/mlruns/1/6b9c010037324ca985f4199a35d2adbd/artifacts/lora_adapter/: adapter_config.json
hw_12/: .env.example  README.md  docker-compose.yaml
hw_12/classifier/: Dockerfile  main.py
hw_12/llm/: Dockerfile  entrypoint.sh
hw_12/orchestrator/: main.py
hw_13/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  fly-deploy.sh  fly.toml  start.sh  supervisord.conf
hw_13/classifier/: Dockerfile  fly.toml  main.py  requirements.txt
hw_13/llm/: entrypoint.sh  fly.toml
hw_13/mlflow/: Dockerfile  fly.toml
hw_13/orchestrator/: fly.toml  main.py
hw_3/: practice_d3_ipynb_.ipynb
hw_6/: .gitignore  inference_service.py  pyproject.toml  report.md
hw_6/app/api/: main.py
hw_7/: client.py  pyproject.toml  server.py
hw_8/: client.py  colab_training.ipynb  evaluate_zero_shot.py  pyproject.toml  run_all.sh  server.py  train_classifier.py
hw_8/app/: models.py
hw_8/app/core/: logging.py
hw_8/data/: sample_submission.csv  test.json  train.json  ytest.csv  ytrain.csv
hw_9/: .dockerignore  Dockerfile.fastapi  Dockerfile.streamlit  client.py  docker-compose.yaml  download_model.sh  preprompt.txt  requirements.txt  server.py
