[project]
name = "hw10-bot-classifier"
version = "0.1.0"
description = "HW 10: Bot + fine-tuned classifier deployed on youare.bot"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "loguru>=0.7.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false
