[project]
name = "echobot"
version = "0.0.1"
description = "Simple echo bot for HumanOrBot project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "streamlit (==1.43.1)",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
test = ["requests>=2.32.3", "uuid>=1.30"]

