[project]
name = "hw7-classifier-chat"
version = "0.1.0"
description = "Echo chat with zero-shot bot classifier"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "streamlit>=1.43.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[tool.uv]
package = false
