[project]
name = "hw8-bot-classifier"
version = "0.1.0"
description = "Zero-shot evaluation + fine-tuned bot classifier for You Are Bot v2"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "streamlit>=1.43.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=3.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.0.0",
    "kagglehub>=0.3.0",
    "tqdm>=4.66.0",
    "accelerate>=1.1.0",
]

[tool.uv]
package = false
